# Spectre

ADS/: 考生座位表.xlsx
ADS/AVL tree/: 1.cpp
ADS/B+树/: 1.cpp  2.cpp  3.cpp  main.cpp
ADS/dp/: ADS08DynamicProgramming_Stu(1).ppt
ADS/greedy/: 1.cpp  2.cpp
ADS/merge/: ADS07Divide Conquer_Stu(1) (1).ppt
ADS/project1/: README.md
ADS/project3/: CMakeLists.txt
ADS/project5/: 1.txt  CMakeLists.txt
ADS/week1/: ADS00.ppt  ADS01AVL_Tch.ppt
ADS/回溯/: ADS05BinomialQ_Stu(1).ppt  ADS06Backtracking_Stu(1).ppt  ADS07Divide Conquer_Stu(1) (1).ppt
ADS/回溯法/: 1.cpp  2.cpp  3.cpp
ADS/斜堆/: ADS04LeftistSkewH_Stu(1).ppt
ADS/红黑树/: 1.cpp  2.cpp  ADS02BTree_Stu(1).ppt  main.cpp  red_and_black.cpp
cs61A/240125/: 1.py
cs61A/240127/: 1.py
cs61A/240218/: 1.py
cs61A/240221/: 1.py
cs61A/240226/: 1.py
cs61A/ants/: .ok_history  .ok_storage  1.py  ants.py
cs61A/cats/: .ok_history  .ok_storage  1.py  cats.py
cs61A/hog/: .ok_history  .ok_storage  1.py  hog.py
cs61A/hw01/: .ok_history  hw01.py
cs61A/hw02/: .ok_history  1.py  hw02.py
cs61A/hw03/: .ok_history  .ok_storage  1.py  hw03.py
cs61A/hw04/: .ok_history  .ok_storage  hw04.py
cs61A/hw05/: .ok_history  .ok_storage  1.py  hw05.py
cs61A/lab01/: .ok_history
cs61A/lab04/: .ok_history  .ok_storage  1.py  lab04.py
cs61A/lab05/: .ok_history  .ok_storage  1.py  lab05.py
cs61A/lab06/: .ok_history  .ok_storage  1.py  lab06.py
cs61A/lab07/: .ok_history  .ok_storage  1.py  classes.py  lab07.py
cs61A/lab08/: .ok_history  .ok_storage  1.py  lab08.py
cs61A/lab09/: .ok_history  .ok_storage  1.py  lab09.py
oop/1/: README.txt
oop/3220105096_project4/: CMakeLists.txt  mydiary.txt  (+2 more)
oop/3220105096_project4/src/: CMakeLists.txt  Diary.cpp  pdadd.cpp  pdlist.cpp  pdremove.cpp  pdshow.cpp
oop/3220105096_project7/: CMakeLists.txt
oop/3220105096_project7/include/: Mallocator.hpp
oop/3220105096_project7/src/: Mallocate.cpp  main.cpp
oop/3220105096_王思睿_project3/src/: CMakeLists.txt  lobby.cpp  main.cpp  moster.cpp  oneway.cpp  princess.cpp  room.cpp
(+75 files in other folders)
